assets/css/style.css
/* ... */
ul.job-list p {
  display: list-item;          /* This has to be "list-item"                                               */
  list-style-type: disc;       /* See https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type     */
  list-style-position: outside;
  margin-left: 0px;
  position: relative;
  margin-bottom: 2px;
  margin-top: 2px;
}

ul.job-list {
  margin-left: 0px;
  margin-top: 0px;
  margin-bottom: 0px;
  position: relative;
}

ul.experience-chart li:last-child {
  padding-bottom: 0;
}

ul.experience-chart li:after {
  position: absolute;
  top: -1px;
  left: -12px;
  right: 0;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  border: 2px solid #4d4d4d;
  background: #fff;
  content: '';
  -webkit-transition: all 0.3s;
  transition: all 0.7s;
}

ul.experience-chart li:hover:after {
  background: #4d4d4d;
}

ul.experience-chart h4 {
  font-size: 19px;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 700;
  color: #4d4d4d;
}

.experience-chart li span {
  font-weight: 700;
  color: #6f6f6f;
}

.experience-chart li p {
  margin-bottom: 0px;
  color: #6f6f6f;
}

.single-experience {
  position: relative;
  top: -2px;
}

/* ========= Start Skill ======= */

.skill-progress-bar {
  margin-top: 41px;
}

.skillbar {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 40px;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background: #fff;
  border: 2px solid #6f6f6f;
  height: 18px;
  border-radius: 22px;
  -moz-border-radius: 22px;
  -webkit-border-radius: 22px;
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
  -webkit-transition-property: width, background-color;
  transition-property: width, background-color;
}

.no-js .first-skill {
  width: 98%;
}

.no-js .second-skill {
  width: 85%;
}

.no-js .third-skill {
  width: 92%;
}

.no-js .fourth-skill {
  width: 60%;
}

.skillbar-title,
.skill-bar-percent {
  font-size: 16px;
  color: #4d4d4d;
  font-weight: 700;
  display: inline-block;
  margin-bottom: 7px;
}

.skill-bar-percent {
  float: right;
}

.skillbar-bar {
  height: 10px;
  margin: 0px 2px;
  width: 0px;
  background: #4d4d4d;
  border-radius: 22px;
  -moz-border-radius: 22px;
  -webkit-border-radius: 22px;
}

/*--------------------------------
   End About Me
----------------------------------*/

/*--------------------------------
  Start Services
----------------------------------*/

.services {
  /* background: #fff; */
  background: url('../images/backgrounds/noisyly.png') repeat fixed, linear-gradient(to bottom, rgba(28,20,20,0.26) 0%,rgba(155,155,155,0) 0.2em) fixed;
  padding: 70px 0px;
}

.services-heading {
  position: relative;
}

.services-heading h1 {
  color: #6f6f6f;
  text-align: center;
  font-weight: 700;
  letter-spacing: 4px;
  margin-bottom: 80px;
  position: relative;
}

.services-heading h1:before {
  content: "";
  position: absolute;
  top: -8px;
  right: 0;
  left: 0;
  margin: auto;
  width: 70px;
  height: 5px;
  background: #6f6f6f;
}

.services-icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 30px;
  padding-bottom: 40px;
}

.service-img {
  /* width: 50px; */
  margin: auto;
  align-items: center;
  font-size: 50px;
  /* text-align: center; */
}

/* .service-img.img-fluid {
  display: block;
  align-items: center;
  text-align: center;
} */

.service-label {
  position: absolute;
  left: 0;
  right: 0;
  top: 65px;
  text-align: center;
  font-weight: 400;
  letter-spacing: -0.5px;
  font-size: 19px;
}

.need-service {
  width: 100%;
  height: 250px;
  margin-top: 70px;
  background: #313131;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  position: relative;
  text-align: center;
}

.need-service:after {
  content: '';
  position: absolute;
  right: 0;
  top: 0;
  left: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 1;
}

.need-service h1 {
  position: relative;
  color: #fff;
  font-weight: 700;
  padding-top: 70px;
  margin: 0;
  font-size: 40px;
  letter-spacing: 2px;
  z-index: 2;
}

.devicon {
  max-width: 2em;
  font-size: 5rem;
}

.need-service a {
  position: relative;
  z-index: 2;
  text-decoration: none;
  color: #313131;
  font-weight: bold;
  font-size: 17px;
  margin-top: 14px;
  display: inline-block;
  background: #fff;
  padding: 10px 19px;
  border-radius: 25px;
  transition: background 0.5s;
}

.need-service a:hover {
  background: transparent;
  color: #fff;
  border: 2px solid #fff;
  padding: 8px 17px;
}

/*--------------------------------
 End Services
----------------------------------*/

/*--------------------------------
   Start Portfolio
----------------------------------*/

.portfolio {
  background: #fff;
  padding: 70px 0px;
}

.portfolio h1 {
  color: #6f6f6f;
  text-align: center;
  font-weight: 700;
  letter-spacing: 4px;
  position: relative;
}

.portfolio h1:before {
  content: "";
  height: 5px;
  background: #6f6f6f;
  position: absolute;
  top: -15px;
  left: 46.5%;
  right: 46.5%;
}

.filtering {
  width: 100%;
  padding: 25px 0px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  display: -moz-box;
  display: -webkit-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.no-js .filtering {
  display: none;
}

.portfolio-navigation {
  display: -webkit-box;
  display: -ms-flexbox;
  display: inherit;
  list-style: none;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-left: 0;
}

.no-flexbox .portfolio-navigation {
  display: inherit;
}
/* ... */

